# AutoToolsGeocoder

./: ChangeLog.htm  HACKING.txt  Makefile  PortfolioExplorer.sln  cppfiles.txt  linux.changelog.txt
GeoCoderCLI/: GeoCoderCLI.cpp  GeoCoderCLI.vcproj  ReadMe.txt
doc/: BuildingDataSetsForPortfolioExplorer.docx  Geocoder Implementation Notes.doc  PortfolioExplorerDesign.doc  Test_Ignore.txt
geocoder/: AUTHORS  ChangeLog  GeoAddressTemplate.cpp  GeoAddressTemplate.h  GeoDataVersion.h  GeoQuery.cpp  GeoQuery.h  GeoQueryImp.cpp  GeoQueryImp.h  GeoQueryItf.h  GeoResultsInternal.h  Geocoder.cpp  Geocoder.def  Geocoder.h  Geocoder.rc  Geocoder.rc2  GeocoderD.cpp  GeocoderD.dsp  GeocoderImp.cpp  GeocoderImp.h  GeocoderImp.ini  GeocoderS.dsp  GeocoderVersion.h  Geocoder_C.cpp  Geocoder_C.h  Geocoder_Headers.cpp  INSTALL  Makefile.am  NEWS  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  geocoder.vcproj  resource.h
geocoder/autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
geocoder_loaders/: BitstreamAdaptor.h  GeoLoadBase.cpp  GeoLoadBase.h  GeoLoadCitySoundex.cpp  GeoLoadCitySoundex.h  GeoLoadCityStatePostcode.cpp  GeoLoadCityStatePostcode.h  GeoLoadCityStatePostcodeFaIndex.cpp  GeoLoadCityStatePostcodeFaIndex.h  GeoLoadCombineAddressRange.cpp  GeoLoadCombineAddressRange.h  GeoLoadCoordinate.cpp  GeoLoadCoordinate.h  GeoLoadPostcodeAlias.cpp  GeoLoadPostcodeAlias.h  GeoLoadPostcodeCentroid.cpp  GeoLoadPostcodeCentroid.h  GeoLoadStreetIntersectionSoundex.cpp  ReadCSV.cpp  (+14 more)
(+212 files in other folders)
