## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = 

AM_CXXFLAGS =\
	 -Wall  

lib_LTLIBRARIES = \
	libgeocoder.la

#so.7.10.0
#	libgeocoder.la


libgeocoder_la_SOURCES = \
	GeoAddressTemplate.cpp  Geocoder_C.cpp  Geocoder.cpp  GeocoderD.cpp  Geocoder_Headers.cpp  GeocoderImp.cpp  GeoQuery.cpp  GeoQueryImp.cpp

libgeocoder_la_LIBADD = 

AM_CPPFLAGS = -I$(srcdir)/include

libgeocoder_la_CXXFLAGS = \
	-static -DHAVE_CONFIG_H 

ACLOCAL_AMFLAGS=-I m4